# SystemInfo

./: .gitignore  CMakeLists.txt  README.md
include/sysinfo/app/: app.h
include/sysinfo/modules/: battery.h  cpu.h  memory.h  module.h
include/sysinfo/utils/: ansi.h  stringFuncs.h  sysfsReader.h
src/: main.cpp
src/app/: app.cpp
src/modules/: battery.cpp  cpu.cpp  memory.cpp
src/utils/: stringFuncs.cpp  sysfsReader.cpp
